[package]
name = "shardmap"
version = "0.2.0"
edition = "2021"
authors = ["Jax (@muxover)"]
description = "A performance-predictable, introspectable concurrent map for engineers who care about load behavior"
license = "Apache-2.0"
repository = "https://github.com/muxover/shardmap"
documentation = "https://docs.rs/shardmap"
readme = "README.md"
keywords = ["concurrent", "hashmap", "sharded", "thread-safe", "performance", "diagnostics", "observability"]
categories = ["concurrency", "data-structures"]

[lib]
name = "shardmap"
path = "src/lib.rs"

[dependencies]
hashbrown = "0.14"
parking_lot = "0.12"
ahash = "0.8"

[dependencies.fxhash]
version = "0.2"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
metrics = []
lock-timing = ["metrics"]
fxhash = ["dep:fxhash"]

[[bench]]
name = "benchmarks"
harness = false
